--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -1,8 +1,9 @@
 name: facebook/flow/build_and_deploy
 on:
+  workflow_dispatch:
   push:
-    branches:
-    - main
+    tags:
+      - v.*
 env:
   AWS_ACCESS_KEY_ID: xxxxUUFG
   AWS_SECRET_ACCESS_KEY: xxxxMSzY
@@ -16,30 +17,15 @@ env:
   S3_BUCKET: xxxx.org
   S3_BUCKET_NEW_WEBSITE: xxxxtorg
 jobs:
-  checkout:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
-    runs-on: ubuntu-latest
-    container:
-      image: node:12
-    steps:
-    - uses: actions/checkout@v4.1.0
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: "./."
   build_js:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: flowtype/flow-ci:linux-x86_64
       env:
         TERM: dumb
         OPAMYES: true
-    needs:
-    - checkout
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: actions/download-artifact@v3.0.2
       with:
         path: "~/flow"
@@ -73,18 +59,14 @@ jobs:
       with:
         path: dist/flow_parser.js
   build_linux:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: flowtype/flow-ci:linux-x86_64
       env:
         TERM: dumb
         OPAMYES: true
-    needs:
-    - checkout
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: actions/download-artifact@v3.0.2
       with:
         path: "~/flow"
@@ -119,13 +101,9 @@ jobs:
       with:
         path: dist/libflowparser-linux64.zip
   build_linux_arm64:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-20.04
-    needs:
-    - checkout
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: actions/download-artifact@v3.0.2
       with:
         path: "~/flow"
@@ -173,13 +151,9 @@ jobs:
       with:
         path: dist/libflowparser-linux-arm64.zip
   build_macos:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: macos-latest
-    needs:
-    - checkout
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: '13.4'
@@ -220,13 +194,9 @@ jobs:
       with:
         path: src/parser/dist/libflowparser.zip
   build_macos_arm64:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: macos-latest
-    needs:
-    - checkout
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: 14.2.0
@@ -267,16 +237,12 @@ jobs:
       with:
         path: src/parser/dist/libflowparser-osx-arm64.zip
   build_win:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
-    needs:
-    - checkout
     env:
       FLOW_TMP_DIR: C:\tmp\flow
       OPAMDOWNLOADJOBS: 1
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: actions/download-artifact@v3.0.2
       with:
         path: "."
@@ -339,8 +305,6 @@ jobs:
       with:
         path: ".\\dist\\flow-win64.zip"
   npm_pack:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: node:12
@@ -392,8 +356,6 @@ jobs:
       with:
         path: dist/npm-flow-remove-types.tgz
   npm_deploy:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: node:12
@@ -406,8 +368,6 @@ jobs:
     - name: Deploy to npm
       run: ".circleci/deploy_npm.sh"
   github_linux:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -422,8 +382,6 @@ jobs:
     - name: Upload Linux libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-linux64.zip "libflowparser-linux64-${{ github.ref }}.zip"
   github_linux_arm64:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -438,8 +396,6 @@ jobs:
     - name: Upload Linux libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-linux-arm64.zip "libflowparser-linux-arm64-${{ github.ref }}.zip"
   github_macos:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -454,8 +410,6 @@ jobs:
     - name: Upload Mac libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-osx.zip "libflowparser-osx-${{ github.ref }}.zip"
   github_macos_arm64:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -470,8 +424,6 @@ jobs:
     - name: Upload Mac libflowparser
       run: .circleci/github_upload.sh dist/libflowparser-osx-arm64.zip "libflowparser-osx-arm64-${{ github.ref }}.zip"
   github_win:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: appropriate/curl:latest
@@ -484,8 +436,6 @@ jobs:
     - name: Upload Windows binary
       run: .circleci/github_upload.sh dist/flow-win64.zip "flow-win64-${{ github.ref }}.zip"
   flow_bin_deploy:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: node:12
@@ -501,8 +451,6 @@ jobs:
     - name: Deploy flow-bin
       run: ".circleci/deploy_flow_bin.sh"
   try_flow_deploy:
-    if: # GitHub does not currently support regular expressions inside if conditions
-#         (github.ref == 'refs/tags//^v.*/') && (github.ref != 'refs/heads//.*/')
     runs-on: ubuntu-latest
     container:
       image: node:12
