--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,11 +24,12 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: flowtype/flow-ci:linux-x86_64
+      options: --user opam
       env:
         TERM: dumb
         OPAMYES: true
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: "./.github/actions/make-opam-cachebreaker"
     - uses: "./.github/actions/restore-opam-cache"
     - name: Init opam
@@ -62,11 +63,12 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: flowtype/flow-ci:linux-x86_64
+      options: --user opam
       env:
         TERM: dumb
         OPAMYES: true
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: "./.github/actions/make-opam-cachebreaker"
     - uses: "./.github/actions/restore-opam-cache"
     - name: Init opam
@@ -100,7 +102,7 @@ jobs:
   build_linux_arm64:
     runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Start Docker image
       run: |-
         rm -rf /home/circleci/.opam && mkdir /home/circleci/.opam
@@ -147,7 +149,7 @@ jobs:
   build_macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: '13.4'
@@ -187,7 +189,7 @@ jobs:
   build_macos_arm64:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: 14.2.0
@@ -230,7 +232,7 @@ jobs:
       FLOW_TMP_DIR: C:\tmp\flow
       OPAMDOWNLOADJOBS: 1
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Set up workspace
       run: New-Item -ItemType Directory $Env:FLOW_TMP_DIR
     - uses: "./.github/actions/install"
@@ -298,7 +300,7 @@ jobs:
     env:
       FLOW_RUNTESTS_PARALLELISM: 8
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Run tests
       run: "./runtests.sh bin/linux/flow | cat"
   runtests_linux_arm64:
@@ -308,7 +310,7 @@ jobs:
     env:
       FLOW_RUNTESTS_PARALLELISM: 8
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Run tests
       run: "./runtests.sh bin/linux-arm64/flow | cat"
   runtests_macos:
@@ -319,7 +321,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: '13.4'
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Run tests
       run: "./runtests.sh bin/macos/flow | cat"
   tool_test_linux:
@@ -329,7 +331,7 @@ jobs:
     needs:
     - build_linux
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Install tool deps from yarn
       run: "(cd packages/flow-dev-tools && yarn install | cat)"
     - name: Run tool tests
@@ -342,7 +344,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: '13.4'
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Install tool deps from yarn
       run: "(cd packages/flow-dev-tools && yarn install | cat)"
     - name: Run tool tests
@@ -352,7 +354,7 @@ jobs:
     needs:
     - build_win
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Turn off nvm
       run: nvm off
     - name: Install Node LTS
@@ -374,7 +376,7 @@ jobs:
         TERM: dumb
         OPAMYES: true
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: "./.github/actions/make-opam-cachebreaker"
     - uses: "./.github/actions/restore-opam-cache"
     - name: Init opam
@@ -390,7 +392,7 @@ jobs:
   ounit_test_macos:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: '13.4'
@@ -416,7 +418,7 @@ jobs:
     needs:
     - build_win
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Test parser
       run: |-
         .\bin\win64\run_parser_tests.exe .\src\parser\test\flow\
@@ -437,7 +439,7 @@ jobs:
     - build_linux_arm64
     - build_macos
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: Pack flow-parser
       run: |-
         mkdir -p packages/flow-parser/dist/
@@ -485,7 +487,7 @@ jobs:
     - build_linux
     - build_js
     steps:
-    - uses: actions/checkout@v4.1.0
+    - uses: actions/checkout@v3.6.0
     - name: restore_cache
       uses: actions/cache@v3.3.2
       with:
