--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -105,11 +105,11 @@ jobs:
     - uses: actions/checkout@v3.6.0
     - name: Start Docker image
       run: |-
-        rm -rf /home/circleci/.opam && mkdir /home/circleci/.opam
+        rm -rf $GITHUB_WORKSPACE/.opam && mkdir $GITHUB_WORKSPACE/.opam
         container_id=$(\
           docker run -it -d \
-            --mount type=bind,source=/home/circleci/.opam,target=/home/opam/.opam \
-            --mount type=bind,source=/home/circleci/flow,target=/home/opam/flow \
+            --mount type=bind,source=$GITHUB_WORKSPACE/.opam,target=/home/opam/.opam \
+            --mount type=bind,source=$GITHUB_WORKSPACE/flow,target=/home/opam/flow \
             flowtype/flow-ci:linux-arm64 \
             /bin/bash \
         )
