--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -113,7 +113,7 @@ jobs:
             flowtype/flow-ci:linux-arm64 \
             /bin/bash \
         )
-        echo "export CONTAINER_ID=$container_id" >> $BASH_ENV
+        echo "CONTAINER_ID=$container_id" >> "$GITHUB_ENV"
     - name: Create cache breaker
       run: docker exec -it $CONTAINER_ID /bin/bash -c 'cd flow && .circleci/make_opam_cachebreaker.sh > .circleci/opamcachebreaker'
     - uses: "./.github/actions/restore-opam-cache"
