--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -115,19 +115,19 @@ jobs:
         )
         echo "CONTAINER_ID=$container_id" >> "$GITHUB_ENV"
     - name: Create cache breaker
-      run: docker exec -it $CONTAINER_ID /bin/bash -c 'cd flow && .circleci/make_opam_cachebreaker.sh > .circleci/opamcachebreaker'
+      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && .circleci/make_opam_cachebreaker.sh > .circleci/opamcachebreaker'
     - uses: "./.github/actions/restore-opam-cache"
     - name: Init opam
-      run: docker exec -it $CONTAINER_ID /bin/bash -c 'flow/.circleci/opam_init.sh'
+      run: docker exec -t $CONTAINER_ID /bin/bash -c 'flow/.circleci/opam_init.sh'
     - name: Install opam deps
-      run: docker exec -it $CONTAINER_ID /bin/bash -c 'cd flow && make deps'
+      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && make deps'
     - uses: "./.github/actions/save-opam-cache"
     - name: Build flow
       run: |-
-        docker exec -it $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make bin/flow dist/flow.zip'
+        docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make bin/flow dist/flow.zip'
         mkdir -p bin/linux-arm64 && cp bin/flow bin/linux-arm64/flow
     - name: Build libflowparser
-      run: docker exec -it $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make -C src/parser dist/libflowparser.zip'
+      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make -C src/parser dist/libflowparser.zip'
     - name: Stop Docker container
       run: docker stop $CONTAINER_ID
     - name: Create artifacts
