--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -187,14 +187,14 @@ jobs:
       with:
         path: src/parser/dist/libflowparser.zip
   build_macos_arm64:
-    runs-on: macos-latest
+    runs-on: macos-13-xlarge
     steps:
     - uses: actions/checkout@v3.6.0
     - uses: maxim-lobanov/setup-xcode@v1.6.0
       with:
         xcode-version: 14.2.0
     - name: Update curl cacerts
-      run: echo "cacert /Users/$USER/flow/.circleci/cacert.pem" >> ~/.curlrc
+      run: echo "cacert $GITHUB_WORKSPACE/.circleci/cacert.pem" >> ~/.curlrc
     - uses: "./.github/actions/install-opam-mac"
       with:
         arch: arm64
