--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -99,53 +99,6 @@ jobs:
     - uses: actions/upload-artifact@v3.1.3
       with:
         path: dist/libflowparser-linux64.zip
-  build_linux_arm64:
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v3.6.0
-    - name: Start Docker image
-      run: |-
-        rm -rf $GITHUB_WORKSPACE/.opam && mkdir $GITHUB_WORKSPACE/.opam
-        container_id=$(\
-          docker run -it -d \
-            --mount type=bind,source=$GITHUB_WORKSPACE/.opam,target=/home/opam/.opam \
-            --mount type=bind,source=$GITHUB_WORKSPACE,target=/home/opam/flow \
-            flowtype/flow-ci:linux-arm64 \
-            /bin/bash \
-        )
-        echo "CONTAINER_ID=$container_id" >> "$GITHUB_ENV"
-    - name: Create cache breaker
-      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && .circleci/make_opam_cachebreaker.sh > .circleci/opamcachebreaker'
-    - uses: "./.github/actions/restore-opam-cache"
-    - name: Init opam
-      run: docker exec -t $CONTAINER_ID /bin/bash -c 'flow/.circleci/opam_init.sh'
-    - name: Install opam deps
-      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && make deps'
-    - uses: "./.github/actions/save-opam-cache"
-    - name: Build flow
-      run: |-
-        docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make bin/flow dist/flow.zip'
-        mkdir -p bin/linux-arm64 && cp bin/flow bin/linux-arm64/flow
-    - name: Build libflowparser
-      run: docker exec -t $CONTAINER_ID /bin/bash -c 'cd flow && opam exec -- make -C src/parser dist/libflowparser.zip'
-    - name: Stop Docker container
-      run: docker stop $CONTAINER_ID
-    - name: Create artifacts
-      run: |-
-        cp dist/flow.zip dist/flow-linux-arm64.zip
-        cp src/parser/dist/libflowparser.zip dist/libflowparser-linux-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: |-
-          ./bin/linux-arm64/flow
-          ./dist/flow-linux-arm64.zip
-          ./dist/libflowparser-linux-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/flow-linux-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
-      with:
-        path: dist/libflowparser-linux-arm64.zip
   build_macos:
     runs-on: macos-latest
     steps:
@@ -234,35 +187,34 @@ jobs:
     steps:
     - uses: actions/checkout@v3.6.0
     - name: Set up workspace
-      run: New-Item -ItemType Directory $Env:FLOW_TMP_DIR
+      run: mkdir $Env:FLOW_TMP_DIR
     - uses: "./.github/actions/install"
     - name: Create cache breaker
       run: |-
         cd "${{ github.workspace }}"
-        /usr/bin/make print-switch > /cygdrive/c/tmp/flow/opamcachebreaker
-        /usr/local/bin/opam --version >> /cygdrive/c/tmp/flow/opamcachebreaker
-        /usr/bin/cat flowtype.opam >> /cygdrive/c/tmp/flow/opamcachebreaker
-        /usr/bin/cat flow_parser.opam >> /cygdrive/c/tmp/flow/opamcachebreaker
-        /usr/bin/cat .circleci/config.yml >> /cygdrive/c/tmp/flow/opamcachebreaker
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail
-    - name: restore_cache
+        /usr/bin/make print-switch > /mnt/c/tmp/flow/opamcachebreaker
+        /usr/local/bin/opam --version >> /mnt/c/tmp/flow/opamcachebreaker
+        /usr/bin/cat flowtype.opam >> /mnt/c/tmp/flow/opamcachebreaker
+        /usr/bin/cat flow_parser.opam >> /mnt/c/tmp/flow/opamcachebreaker
+        /usr/bin/cat .circleci/config.yml >> /mnt/c/tmp/flow/opamcachebreaker
+      shell: C:\Windows\System32\bash.exe -leo pipefail
+    - name: Cache
       uses: actions/cache@v3.3.2
       with:
         key: opam-cache-{{ arch }}-{{ checksum "C:/tmp/flow/opamcachebreaker" }}
-        path: |-
-          C:/tools/cygwin/home/circleci/.opam
+        path: |
+          $Env:HOME/.opam
           _opam
-        restore-keys: opam-cache-{{ arch }}-{{ checksum "C:/tmp/flow/opamcachebreaker" }}
     - name: Init opam
       run: opam init default 'https://github.com/ocaml-opam/opam-repository-mingw.git#opam2' --bare --disable-sandboxing --no-setup
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail
     - name: Create opam switch
       run: |-
         cd "${{ github.workspace }}"
         make deps
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail
       env:
-        PATH: "/usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - name: Build flow.exe
       run: |-
         cd "${{ github.workspace }}"
@@ -270,21 +222,21 @@ jobs:
         make bin/flow.exe dist/flow.zip
         mkdir -p bin/win64 && cp bin/flow.exe bin/win64/flow.exe
         cp dist/flow.zip dist/flow-win64.zip
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail
       env:
-        PATH: "/usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - name: Build parser test runner
-      run: |-
+      run: |
         cd "${{ github.workspace }}"
         eval $(opam env)
         dune build src/parser/test/run_tests.exe
         cp _build/default/src/parser/test/run_tests.exe bin/win64/run_parser_tests.exe
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail
       env:
-        PATH: "/usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - uses: actions/upload-artifact@v3.1.3
       with:
-        path: |-
+        path: |
           ./bin/win64/flow.exe
           ./dist/flow-win64.zip
           ./bin/win64/run_parser_tests.exe
@@ -427,24 +379,23 @@ jobs:
     needs:
     - build_js
     - build_linux
-    - build_linux_arm64
     - build_macos
     steps:
     - uses: actions/checkout@v3.6.0
     - name: Pack flow-parser
-      run: |-
+      run: |
         mkdir -p packages/flow-parser/dist/
         cp dist/flow_parser.js packages/flow-parser/dist/flow_parser.js
         make dist/npm-flow-parser.tgz
     - name: Pack flow-parser-bin
-      run: |-
+      run: |
         mkdir -p packages/flow-parser-bin/dist/release/
         cp dist/libflowparser-linux64.zip packages/flow-parser-bin/dist/release/libflowparser-linux64.zip
         cp dist/libflowparser-linux-arm64.zip packages/flow-parser-bin/dist/release/libflowparser-linux-arm64.zip
         cp dist/libflowparser-osx.zip packages/flow-parser-bin/dist/release/libflowparser-osx.zip
         make dist/npm-flow-parser-bin.tgz
     - name: Pack flow-remove-types and flow-node
-      run: |-
+      run: |
         rm -rf packages/flow-node
         cp -r packages/flow-remove-types/ packages/flow-node/
         sed -i '0,/flow-remove-types/s//flow-node/' packages/flow-node/package.json
