--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -1,10 +1,11 @@
 name: install
+description: Install opam on windows
 runs:
   using: composite
   steps:
   - name: Install dependencies
-    run: ".\\scripts\\windows\\install_deps.ps1"
-    shell: bash
+    run: .\scripts\windows\install_deps.ps1
+    shell: pwsh
   - name: Install opam
-    run: ".\\scripts\\windows\\install_opam.ps1"
-    shell: bash
+    run: .\scripts\windows\install_opam.ps1
+    shell: pwsh
