--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -4,7 +4,10 @@ runs:
   using: composite
   steps:
   - name: Install dependencies
-    run: .\scripts\windows\install_deps.ps1
+    run: |
+      choco install --no-progress -y --source https://chocolatey.org/api/v2/ cygwin cyg-get 7zip
+      setx /M PATH $($Env:PATH + ';C:\Program Files\7-Zip')
+      cyg-get rsync patch diffutils curl make zip unzip git m4 perl mingw64-x86_64-gcc-core mingw64-x86_64-gcc-g++ mingw-w64-x86_64-gcc-libs
     shell: pwsh
   - name: Install opam
     run: .\scripts\windows\install_opam.ps1
