--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -180,7 +180,7 @@ jobs:
       with:
         path: src/parser/dist/libflowparser-osx-arm64.zip
   build_win:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     env:
       FLOW_TMP_DIR: C:\tmp\flow
       OPAMDOWNLOADJOBS: 1
