--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -197,7 +197,7 @@ jobs:
         /usr/bin/cat flowtype.opam >> /mnt/c/tmp/flow/opamcachebreaker
         /usr/bin/cat flow_parser.opam >> /mnt/c/tmp/flow/opamcachebreaker
         /usr/bin/cat .circleci/config.yml >> /mnt/c/tmp/flow/opamcachebreaker
-      shell: C:\Windows\System32\bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail {0}
     - name: Cache
       uses: actions/cache@v3.3.2
       with:
@@ -207,12 +207,12 @@ jobs:
           _opam
     - name: Init opam
       run: opam init default 'https://github.com/ocaml-opam/opam-repository-mingw.git#opam2' --bare --disable-sandboxing --no-setup
-      shell: C:\Windows\System32\bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail {0}
     - name: Create opam switch
       run: |-
         cd "${{ github.workspace }}"
         make deps
-      shell: C:\Windows\System32\bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail {0}
       env:
         PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - name: Build flow.exe
@@ -222,7 +222,7 @@ jobs:
         make bin/flow.exe dist/flow.zip
         mkdir -p bin/win64 && cp bin/flow.exe bin/win64/flow.exe
         cp dist/flow.zip dist/flow-win64.zip
-      shell: C:\Windows\System32\bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail {0}
       env:
         PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - name: Build parser test runner
@@ -231,7 +231,7 @@ jobs:
         eval $(opam env)
         dune build src/parser/test/run_tests.exe
         cp _build/default/src/parser/test/run_tests.exe bin/win64/run_parser_tests.exe
-      shell: C:\Windows\System32\bash.exe -leo pipefail
+      shell: C:\Windows\System32\bash.exe -leo pipefail {0}
       env:
         PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
     - uses: actions/upload-artifact@v3.1.3
