--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -191,6 +191,8 @@ jobs:
     - uses: "./.github/actions/install"
     - name: Create cache breaker
       run: |-
+        pwd
+        ls -lR
         /usr/bin/make print-switch > /cygdrive/d/a/_temp/opamcachebreaker
         /usr/local/bin/opam --version >> /cygdrive/d/a/_temp/opamcachebreaker
         /usr/bin/cat flowtype.opam >> /cygdrive/d/a/_temp/opamcachebreaker
