rework the cache key

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -189,20 +189,10 @@ jobs:
     - name: Set up workspace
       run: mkdir $Env:FLOW_TMP_DIR
     - uses: "./.github/actions/install"
-    - name: Create cache breaker
-      run: |-
-        ls -lR
-        /usr/bin/make print-switch > /cygdrive/d/a/_temp/opamcachebreaker
-        /usr/local/bin/opam --version >> /cygdrive/d/a/_temp/opamcachebreaker
-        /usr/bin/cat flowtype.opam >> /cygdrive/d/a/_temp/opamcachebreaker
-        /usr/bin/cat flow_parser.opam >> /cygdrive/d/a/_temp/opamcachebreaker
-        /usr/bin/cat .circleci/config.yml >> /cygdrive/d/a/_temp/opamcachebreaker
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail {0}
-      working-directory: ${{ github.workspace }}
     - name: Cache
       uses: actions/cache@v3.3.2
       with:
-        key: opam-cache-{{ arch }}-{{ checksum "C:/tmp/flow/opamcachebreaker" }}
+        key: opam-cache-{{ runner.os }}-{{ runner.arch }}-{{ hashfiles('flowtype.opam', 'flow_parser.opam', '.circleci/config.yml') }}
         path: |
           $Env:HOME/.opam
           _opam
