--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -4,8 +4,28 @@ runs:
   using: composite
   steps:
   - name: Install dependencies
-    run: .\scripts\windows\install_deps.ps1
+    run: |
+      choco install --no-progress -y --source https://chocolatey.org/api/v2/ 7zip
     shell: pwsh
+  - name: Install cygwin
+    uses: cygwin/cygwin-install-action@master
+    with:
+      packages: >-
+        rsync
+        patch
+        diffutils
+        curl
+        make
+        zip
+        unzip
+        git
+        m4
+        perl
+        mingw64-x86_64-gcc-core
+        mingw64-x86_64-gcc-g++
+        mingw-w64-x86_64-gcc-libs
+        coreutils
+        moreutils
   - name: Install opam
     run: .\scripts\windows\install_opam.ps1
     shell: pwsh
