--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -198,35 +198,31 @@ jobs:
           _opam
     - name: Init opam
       run: opam init default 'https://github.com/ocaml-opam/opam-repository-mingw.git#opam2' --bare --disable-sandboxing --no-setup
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail {0}
+      shell: C:\cygwin\bin\bash.exe '{0}'
     - name: Create opam switch
       run: |-
-        echo "GITHUB_WORKSPACE=$GITHUB_WORKSPACE"
-        cd "$GITHUB_WORKSPACE"
-        /usr/bin/make deps
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail {0}
+        make deps
+      shell: C:\cygwin\bin\bash.exe '{0}'
       working-directory: ${{ github.workspace }}
       env:
-        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - name: Build flow.exe
       run: |-
-        cd "${{ github.workspace }}"
         eval $(opam env)
         make bin/flow.exe dist/flow.zip
         mkdir -p bin/win64 && cp bin/flow.exe bin/win64/flow.exe
         cp dist/flow.zip dist/flow-win64.zip
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail {0}
+      shell: C:\cygwin\bin\bash.exe '{0}'
       env:
-        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - name: Build parser test runner
       run: |
-        cd "${{ github.workspace }}"
         eval $(opam env)
         dune build src/parser/test/run_tests.exe
         cp _build/default/src/parser/test/run_tests.exe bin/win64/run_parser_tests.exe
-      shell: C:/tools/cygwin/bin/bash.exe -leo pipefail {0}
+      shell: C:\cygwin\bin\bash.exe '{0}'
       env:
-        PATH: "/usr/local/bin:/usr/bin:/mnt/c/Windows/system32:/mnt/c/Windows:/mnt/c/Windows/System32/Wbem:/mnt/c/Windows/System32/WindowsPowerShell/v1.0"
+        PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - uses: actions/upload-artifact@v3.1.3
       with:
         path: |
