--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -212,7 +212,7 @@ jobs:
         make bin/flow.exe dist/flow.zip
         mkdir -p bin/win64 && cp bin/flow.exe bin/win64/flow.exe
         cp dist/flow.zip dist/flow-win64.zip
-      shell: C:\cygwin\bin\bash.exe '{0}'
+      shell: C:\cygwin\bin\bash.exe -leo pipefail '{0}'
       env:
         PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
     - name: Build parser test runner
