--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -47,16 +47,16 @@ jobs:
         mkdir -p dist
         cp src/parser/flow_parser.js dist/flow_parser.js
         cp src/parser/flow_parser.js packages/flow-parser/flow_parser.js
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |-
           ./bin/flow.js
           ./dist/flow_parser.js
           ./packages/flow-parser/flow_parser.js
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: bin/flow.js
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/flow_parser.js
   build_linux:
@@ -87,16 +87,16 @@ jobs:
       run: |-
         cp dist/flow.zip dist/flow-linux64.zip
         cp src/parser/dist/libflowparser.zip dist/libflowparser-linux64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |-
           ./bin/linux/flow
           ./dist/flow-linux64.zip
           ./dist/libflowparser-linux64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/flow-linux64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/libflowparser-linux64.zip
   build_macos:
@@ -127,16 +127,16 @@ jobs:
       run: |-
         cp dist/flow.zip dist/flow-osx.zip
         cp src/parser/dist/libflowparser.zip dist/libflowparser-osx.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |-
           ./bin/macos/flow
           ./dist/flow-osx.zip
           ./dist/libflowparser-osx.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/flow-osx.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: src/parser/dist/libflowparser.zip
   build_macos_arm64:
@@ -167,16 +167,16 @@ jobs:
       run: |-
         cp dist/flow.zip dist/flow-osx-arm64.zip
         cp src/parser/dist/libflowparser.zip dist/libflowparser-osx-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |-
           ./bin/macos-arm64/flow
           ./dist/flow-osx-arm64.zip
           ./dist/libflowparser-osx-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/flow-osx-arm64.zip
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: src/parser/dist/libflowparser-osx-arm64.zip
   build_win:
@@ -224,13 +224,13 @@ jobs:
       shell: C:\cygwin\bin\bash.exe '{0}'
       env:
         PATH: /usr/local/bin:/usr/bin:/cygdrive/c/Windows/system32:/cygdrive/c/Windows:/cygdrive/c/Windows/System32/Wbem:/cygdrive/c/Windows/System32/WindowsPowerShell/v1.0
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |
           ./bin/win64/flow.exe
           ./dist/flow-win64.zip
           ./bin/win64/run_parser_tests.exe
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: ".\\dist\\flow-win64.zip"
   runtests_linux:
@@ -319,7 +319,7 @@ jobs:
       run: make deps-test | cat
     - name: Run ounit tests
       run: opam exec -- make ounit-tests-ci
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: test-results/ounit/
   ounit_test_macos:
@@ -343,7 +343,7 @@ jobs:
       run: make deps-test | cat
     - name: Run ounit tests
       run: opam exec -- make ounit-tests-ci
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: test-results/ounit/
   parser_test_win:
@@ -372,6 +372,7 @@ jobs:
     - build_macos
     steps:
     - uses: actions/checkout@v3.6.0
+    - uses: actions/download-artifact@v4.1.0
     - name: Pack flow-parser
       run: |
         mkdir -p packages/flow-parser/dist/
@@ -391,23 +392,23 @@ jobs:
         sed -i '0,/flow-remove-types/s//flow-node/' packages/flow-node/package.json
         make dist/npm-flow-remove-types.tgz
         make dist/npm-flow-node.tgz
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: |-
           ./dist/npm-flow-parser.tgz
           ./dist/npm-flow-parser-bin.tgz
           ./dist/npm-flow-node.tgz
           ./dist/npm-flow-remove-types.tgz
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/npm-flow-parser.tgz
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/npm-flow-parser-bin.tgz
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/npm-flow-node.tgz
-    - uses: actions/upload-artifact@v3.1.3
+    - uses: actions/upload-artifact@v4.0.0
       with:
         path: dist/npm-flow-remove-types.tgz
   website_deploy:
